--- a/src/HUD/MapSeries/mapseries.scss
+++ b/src/HUD/MapSeries/mapseries.scss
@@ -1,6 +1,6 @@
 .map_series_container {
   position: fixed;
-  top: 120px;
+  top: 20px;
   right: 40px;
   display: flex;
   opacity: 0;
@@ -11,6 +11,7 @@
   text-transform: uppercase;
   overflow: hidden;
   border-radius: 0 0 12px 12px;
+  background-color: rgba(39, 39, 39, 0.6);
 
   .veto_container {
     display: flex;
@@ -43,8 +44,8 @@
     & > * {
       position: relative;
       z-index: 1;
+      font-size: 18px;
     }
-
 
     .col2 {
       background: rgba(255, 255, 255, 0.2);
@@ -174,6 +175,34 @@
     width: 140px;
     box-sizing: border-box;
     height: 100%;
+
+    &__score {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: center;
+
+      span {
+        margin-left: 7px;
+        margin-right: 7px;
+      }
+
+      img {
+        width: 24px;
+        height: auto;
+      }
+    }
+
+    &__inProgress {
+      padding: 4px 10px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 13px;
+      text-align: center;
+      color: #FFFFFF;
+      background: rgba(39, 39, 39, 0.8);
+      border-radius: 4px;
+    }
   }
 }
 
@@ -222,4 +251,12 @@
 
 #timeout.ct {
   color: var(--color-new-ct);
+}
+
+.decider-label {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 13px;
+  text-align: center;
+  color: #FFFFFF;
 }
