--- a/src/HUD/Radar/LexoRadar/index.css
+++ b/src/HUD/Radar/LexoRadar/index.css
@@ -273,6 +273,13 @@ html, body, .map-container {
     text-shadow: 1px 1px 2px rgba(9, 60, 114, 0.2);
 }
 
+.map .player .label svg {
+    display: block;
+    width: 100%;
+    height: auto;
+    transform: translate(-3%, -5%);
+}
+
 .map .bomb {
     transition: transform 0.1s ease;
 }
